# test_atomic

./: .coveragerc  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yaml  habbit_fixture.json  pyproject.toml  requirements.txt  users_fixture.json
.github/workflows/: ci-cd.yaml
atomicshabbits/: admin.py  apps.py  models.py  paginators.py  serializers.py  services.py  tasks.py  test.py  urls.py  validators.py  views.py
atomicshabbits/migrations/: 0001_initial.py  0002_rename_connected_hubbit_habbits_connected_habbit.py
config/: celery.py  settings.py  urls.py
nginx/: Dockerfile  nginx.conf
users/: admin.py  models.py  serializers.py  test.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_tg_chat_id.py
